--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,8 +8,8 @@ phases:
       - echo Logging in to Amazon ECR...
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
-      - REPOSITORY_URI=753844120740.dkr.ecr.us-east-1.amazonaws.com/ecr-docer-image
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 753844120740.dkr.ecr.us-east-1.amazonaws.com
+      - REPOSITORY_URI=513661464973.dkr.ecr.us-east-1.amazonaws.com/ecr-docker-image
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 513661464973.dkr.ecr.us-east-1.amazonaws.com
   build:
     commands:
       - echo Build started on `date`
