--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,3 +21,6 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $REPOSITORY_URI:$IMAGE_TAG
+  artifacts:
+      files: imagedefinitions.json
+ 
