--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,11 +16,15 @@ phases:
       - echo Building the Docker image...          
       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
       - docker tag $REPOSITORY_URI:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
-  post_build:
-    commands:
-      - echo Build completed on `date`
-      - echo Pushing the Docker image...
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-  artifacts:
-      files: imagedefinitions.json
+      - echo pushing  docker Image to ECR repo
+      - docker push $REPOSITORY_URI_FLUENT:$IMAGE_TAG
+      - cd $CODEBUILD_SRC_DIR
+  post_build: 
+    commands: 
+      - echo Writing image definitions file for service refresh...
+      - $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json 
+      - cat imagedefinitions.json
+artifacts:
+    files: imagedefinitions.json
  
