--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
         java: corretto17
   pre_build:
     commands:
+      - cd $CODEBUILD_SRC_DIR
       - echo Logging in to Amazon ECR....
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}-${CODEBUILD_BUILD_NUMBER}
@@ -16,9 +17,8 @@ phases:
       - echo Building the Docker image...          
       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
       - docker tag $REPOSITORY_URI:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo pushing  docker Image to ECR repo
-      - docker push $REPOSITORY_URI_FLUENT:$IMAGE_TAG
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
       - cd $CODEBUILD_SRC_DIR
   post_build: 
     commands: 
