--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,7 +23,7 @@ phases:
   post_build: 
     commands: 
       - echo Writing image definitions file for service refresh...
-      - $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json 
+      - printf '[{"name":"test-ecs","imageUri":"%s"}'  $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       - cat imagedefinitions.json
 artifacts:
     files: imagedefinitions.json
